crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_public_u0000.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa PUBLIC\u0000\"####)"
---
[
    Token {
        data: "DOCTYPEa PUBLIC\0",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
